1. Added correct validation module to maven. 2. Implemented validation process in creation Role & User entities through web interface (MVC, Thymeleaf, MySQL) 3. Added .error style in style.scc 4. Some refactoring